@@ -138,6 +138,7 @@
     <Compile Include="ControllerTreeTestCase.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helpers\AbstractHelperTestCase.cs" />
     <Compile Include="PostBackTestCase.cs" />
     <Compile Include="DefaultControllerFactoryTestCase.cs">
       <SubType>Code</SubType>
