@@ -4,6 +4,13 @@ Change history
 Release Candidate 3
 ===================
 
+- Enhanced AbstractHelper.BuildQueryString to support multi-value query strings:
+  IDictionary dict = new Hashtable();
+  dict.Add("id", 5);
+  dict.Add("selectedItem", new int[] { 2, 4, 99 });
+  string queryString = BuildQueryString(dict);
+  // should result in: "id=5&amp;selectedItem=2&amp;selectedItem=4&amp;selectedItem=99&amp;"
+
 - FormHelper.Select() - applied patch from James Sapara allowing firstoptionvalue to be set to 
   something other than null. 
 
